--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ p    {color: red;}
 
 <h1>20201602 김주형</h1>
 <p>고양이 =^._.^= ∫ </p>
-<img src="C:\Users\310-29\Downloads\1678067529078.jpg" width="500" height="600">
+<img src="1678067529078.jpg" width="500" height="600">
 
 
 </body>
