--- a/homework.html
+++ b/homework.html
@@ -70,8 +70,8 @@ body {font-family: "Lato", sans-serif}
 
   <!-- The Band Section -->
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
-    <h2 class="w3-wide">THE BAND</h2>
-    <p class="w3-opacity"><i>We love music</i></p>
+    <h2 class="w3-wide">homework-20201602-김주형</h2>
+    <p class="w3-opacity"><i>homework</i></p>
     <p class="w3-justify"><a bref="homework1.php"></a></p>
     <p class="w3-justify"><a bref="homework2.php"></a></p>
     <p class="w3-justify"><a bref="homework3.php"></a></p>
